--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ ul
   margin: 0 0 20px 0;}
   
 table
-{ margin: 10px 0 30px 0;
+{ margin: 10px 0 0px 0;
   width: 100%;
   height:auto;
 }
@@ -298,7 +298,7 @@ table tr th, table tr td
 { background: none;
   color: #47433F;
   padding: 7px 4px;
-  text-align: left;}
+  }
   
 table tr td
 { background: none;
